tests/compile-fail/integration__integration__mapfiles__intrinsic_jmp_needs_offset.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad signature: signature has a 't' arg without an 'o' arg
  ┌─ <mapfile-1>:5:3
  │
5 │ 4 St
  │   ^^ signature has a 't' arg without an 'o' arg


